--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,18 @@
         android:theme="@style/Theme.Book_Market"
         tools:targetApi="31">
         <activity
-            android:name=".DangKi"
+            android:name=".ManHinhWelcome"
+            android:exported="true" >
+
+        </activity>
+        <activity
+            android:name=".DangNhap"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true" />
         <activity
-            android:name=".DangNhap"
+            android:name=".DangKi"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
