--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,11 @@
         android:theme="@style/Theme.Book_Market"
         tools:targetApi="31">
         <activity
+            android:name=".QuenMatKhau"
+            android:exported="false" />
+        <activity
             android:name=".ManHinhWelcome"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,17 +26,13 @@
         </activity>
         <activity
             android:name=".DangNhap"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"/>
         <activity
             android:name=".DangKi"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"/>
     </application>
 
 </manifest>
