--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation 'com.airbnb.android:lottie:6.4.0'
+
+    //Ảnh tròn
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
