--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,20 @@
         android:theme="@style/Theme.Book_Market"
         tools:targetApi="31">
         <activity
+            android:name=".GioHangActivity"
+            android:exported="false" />
+        <activity
             android:name=".QuenMatKhau"
             android:exported="false" />
         <activity
             android:name=".ManHinhWelcome"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".DangNhap"
+            android:exported="true" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,16 +35,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".DangNhap"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
-        <activity
             android:name=".DangKi"
-            android:exported="true"/>
+            android:exported="true" />
     </application>
 
 </manifest>
