--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
 
     //Ảnh tròn
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //Thư viện picaso đọc dữ liệu hình ảnh từ Internet
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
