--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -21,13 +21,6 @@
         <activity
             android:name=".ManHinhWelcome"
             android:exported="true">
-        </activity>
-        <activity
-            android:name=".DangNhap"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -35,8 +28,15 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".DangNhap"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".DangKi"
-            android:exported="true" />
+            android:exported="false" />
     </application>
 
 </manifest>
